# plant_boss

./: .gitignore  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
docs/: esp_idf commands.txt
hw_esp32/easy_eda/: BOM_humidity_esp32_2023-06-02.csv  PCB_external_board_2023-06-02.json  PCB_main_board_2023-06-02.json  SCH_humidity_esp32_2023-06-02.json
sw_esp32/: Makefile  architecture_plant_boss.drawio  nvs_parameters.csv  nvs_parameters.ps1  nvs_parameters.sh
sw_esp32/doxygen/: Doxyfile
sw_esp32/doxygen/html/: adc__wrapper_8c.html  adc__wrapper_8c__incl.map  adc__wrapper_8c__incl.md5  adc__wrapper_8h.html  adc__wrapper_8h__dep__incl.map  adc__wrapper_8h__dep__incl.md5  adc__wrapper_8h__incl.map  adc__wrapper_8h__incl.md5  adc__wrapper_8h_source.html  annotated.html  battery_8c.html  battery_8c__incl.map  battery_8c__incl.md5  battery_8h.html  battery_8h__dep__incl.map  battery_8h__dep__incl.md5  battery_8h__incl.map  battery_8h__incl.md5  battery_8h_source.html  classes.html  (+133 more)
sw_esp32/flash_image_crc/: esp_idf commands.txt  flash_image_crc.py  flash_image_crc.sh
sw_esp32/mem_crc/: flash_image_crc.py
sw_esp32/plant_boss/: .cproject  .project  CMakeLists.txt  plant_boss_esp_idf.code-workspace  sdkconfig  sdkconfig.old
sw_esp32/plant_boss/main/: CMakeLists.txt  main.c  main.c.ctu-info  main.c.dump  main.h
sw_esp32/scripts/: flash_image_crc.py  nvs_parameters.csv  nvs_parameters.sh
sw_esp32/static_analysis/: cppcheck.sh  cppcheck.txt  flawfinder.sh  flawfinder.txt  setup.sh  splint.sh  splint.txt
sw_rpi/: execute_plant_boss.sh  http_request_handler.py  plant_boss.db  plant_boss.sh  plant_boss_telegram_bot.sh  plant_boss_uwsgi.sh  request_handler.py  setup_plant_boss.sh  telegram_bot.py  test_rpi.sh  uwsgi_plant_boss.py  uwsgi_plant_boss_plot.py  uwsgi_plant_boss_settings.py
sw_rpi/nginx/: default
sw_rpi/systemd/: plant_boss.service  plant_boss_telegram_bot.service  plant_boss_uwsgi.service
sw_rpi_custom_linux/buildroot-2023.05.1/: .config
(+180 files in other folders)
