idf_component_register(
    SRCS "main.c" 
    "../src/thread_app.c" 
    "../src/thread_input.c" 
    "../src/thread_output.c" 
    "../src/thread_network.c" 
    "../src/thread_memory.c" 
    "../src/adc_wrapper.c" 
    "../src/gpio_wrapper.c" 
    "../src/i2c_wrapper.c" 
    "../src/nvs_wrapper.c" 
    "../src/uart_wrapper.c" 
    "../src/wifi_wrapper.c" 
    "../src/error.c" 
    "../src/battery.c" 
    "../src/bh1750fvi.c" 
    "../src/hw390.c" 
    "../src/lm20bim7.c" 
    INCLUDE_DIRS "../inc")
