idf_component_register(
    SRCS 
    "main.c" 
    "../src/thread_app.c" 
    "../src/thread_input.c" 
    "../src/thread_output.c" 
    "../src/thread_network.c" 
    "../src/thread_memory.c" 
    "../wrappers/adc_wrapper.c" 
    "../wrappers/gpio_wrapper.c" 
    "../wrappers/i2c_wrapper.c" 
    "../wrappers/nvs_wrapper.c" 
    "../wrappers/uart_wrapper.c" 
    "../wrappers/wifi_wrapper.c" 
    "../src/error.c" 
    "../src/battery.c" 
    "../drivers/bh1750fvi.c" 
    "../drivers/hw390.c" 
    "../drivers/lm20bim7.c" 
    INCLUDE_DIRS 
    "../drivers"
    "../wrappers"
    "../inc")
