idf_component_register(
    SRCS 
    "main.c" 
    "../src/thread_app.c" 
    "../src/thread_input.c" 
    "../src/thread_output.c" 
    "../src/thread_network.c" 
    "../src/thread_memory.c" 
    "../src/common_thread_objects.c" 
    "../src/memory_crc.c" 
    "../wrappers/adc_wrapper.c" 
    "../wrappers/gpio_wrapper.c" 
    "../wrappers/i2c_wrapper.c" 
    "../wrappers/nvm_wrapper.c" 
    "../wrappers/uart_wrapper.c" 
    "../wrappers/wifi_wrapper.c" 
    "../src/error.c" 
    "../src/battery.c" 
    "../drivers/bh1750fvi.c" 
    "../drivers/hw390.c" 
    "../drivers/lm20bim7.c" 
    INCLUDE_DIRS 
    "../main"
    "../drivers"
    "../wrappers"
    "../inc")
